Fixed image placement and restarted animations on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1310,6 +1310,15 @@ ul.slides li {
         height:189px;
         margin:0;
     }
+    #lead{
+        background: url(../images/prateek.jpg);
+        background-size: 800px;
+    }
+    .socialHead{
+        li{
+            font-size: 2em;
+        }
+    }
 
 }
 
